--- a/public/styles.css
+++ b/public/styles.css
@@ -437,6 +437,7 @@ textarea.form-field {
 
 /* Contact form styles */
 .form-overlay {
+  overflow-y: auto;
   background-color: rgba(255, 255, 255, .85);
   backdrop-filter: blur(5px);
   position: fixed;
@@ -445,9 +446,16 @@ textarea.form-field {
   left: 0;
   right: 0;
   z-index: 100;
-  display: flex;
-  justify-content: center;
-  align-content: center;
+  visibility: hidden;
+  opacity: 0;
+  transform: scale(1.2);
+  transition: all 0.3s ease-out;
+}
+
+.form-overlay--is-visible {
+  visibility: visible;
+  opacity: 1;
+  transform: scale(1);
 }
 
 .form-overlay-inner {
@@ -457,4 +465,163 @@ textarea.form-field {
   margin: 16px;
   flex: 1;
   align-self: center;
+  display: grid;
+  grid-template-columns: 1fr;
+  position: relative;
+}
+
+.form-photo {
+  order: 1;
+  grid-row: 1;
+  position: relative;
+  height: 200px;
+}
+
+.form-content {
+  padding: 54px 30px;
+}
+
+@media screen and (min-width: 745px) {
+  .form-overlay {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+  }
+
+  .form-overlay-inner {
+    grid-template-columns: 340px 1fr;
+  }
+
+  .form-photo {
+    height: auto;
+  }
+
+  .form-content {
+    padding: 54px 38px;
+    position: relative;
+  }
+}
+
+.form-photo p {
+  line-height: 1.2;
+  position: absolute;
+  margin: 0;
+  padding: 16px 25px;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(255, 255, 255, .63);
+  backdrop-filter: blur(2px);
+  color: #555;
+  font-size: .9375rem;
+}
+
+.form-photo strong {
+  color: #000;
+  font-size: 2.25rem;
+  font-weight: normal;
+  display: block;
+}
+
+.form-photo img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.justify-right {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.close-form-overlay {
+  position: absolute;
+  top: 0;
+  right: 10px;
+  color: rgba(0, 0, 0, .41);
+  font-size: 2.25rem;
+  transform: scaleX(1.2);
+  cursor: pointer;
+  opacity: .7;
+  z-index: 101;
+}
+
+.close-form-overlay:hover {
+  opacity: 1;
+}
+
+.pet-contact-btn {
+  background: transparent;
+  border: none;
+  padding: 0;
+  margin-left: 12px;
+  position: relative;
+  top: 4px;
+  opacity: .7;
+  cursor: pointer;
+  outline: none;
+}
+
+.pet-contact-btn:hover {
+  opacity: 1;
+}
+
+.thank-you {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 102;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s ease-out;
+}
+
+.thank-you--visible {
+  opacity: 1;
+  visibility: visible;
+}
+
+.thank-you p {
+  align-self: center;
+  font-size: 1.4rem;
+}
+
+.thank-you svg {
+  color: rgb(66, 225, 66);
+  position: relative;
+  top: 4px;
+  margin-right: 4px;
+}
+
+.contact-list {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+.contact-list th, .contact-list td {
+  padding: 10px;
+  vertical-align: top;
+}
+
+.contact-list th {
+  text-align: left;
+  font-weight: normal;
+  font-size: .87rem;
+  color: #7d7d7d;
+  padding: 0 10px;
+}
+
+.contact-list td {
+  font-size: 1rem;
+}
+
+.contact-list tr:nth-child(even) {
+  background-color: #f1f1f1;
 }
